rename to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Hyperbolic tiling</title>
+        <title>H^2 x E tiling</title>
 
         <!--
         Hyperbolic space with webVR support. WASD + Arrows to move, space or p to play/pause.
