vr option on mobile device

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
           border-left: .5px solid white;
           border-bottom: .5px solid white;
       "></div> -->
+      <img id="vr-icon" src="media/vr-icon.png" height="50px" 
+        style="
+          position: fixed;
+          bottom: 30px;
+          right: 50px;
+          display: none;
+      "/>
     </body>
 
     <script type="x-shader/x-vertex" id="vertexShader">
